<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quater"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseFragment">

    <EditText
        android:id="@+id/editYear"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="123dp"
        android:ems="10"
        android:hint="@string/edit_ADD_Year_hint"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCourse1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/edit_Add_Course_hint"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editYear" />

    <EditText
        android:id="@+id/editCourse2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/edit_Add_Course_hint"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourse1" />

    <EditText
        android:id="@+id/editCourse3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/edit_Add_Course_hint"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourse2" />

    <Button
        android:id="@+id/buttonAddQuater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="162dp"
        android:text="@string/button_ADD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourse3" />

    <Button
        android:id="@+id/ViewQuaterButton"
        android:layout_width="163dp"
        android:layout_height="55dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="124dp"
        android:text="@string/To_Display_Quarter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddQuater" />


</androidx.constraintlayout.widget.ConstraintLayout>